--- a/src/app/element/arc/index.jade
+++ b/src/app/element/arc/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Конструкция в виде арки символизирует вход в счастливую жизнь молодоженов, после того как они обменяются кольцами.  В некоторых свадебных традициях арка  - это символ небесного свода, который благословляет брак. Четырехопорная арка несет идею нового дома. Арка может  быть любых форм (дуга, п-образные конструкции, шатер, сходящиеся элементы). Она может быть сделана из разных составных элементов: двери, деревья, ткани, вазы. Обильно украшается цветами, зеленью. Стоимость от 12 000 рублей.'
+  - var description = 'Конструкция в виде арки символизирует вход в счастливую жизнь молодоженов, после того как они обменяются кольцами.  В некоторых свадебных традициях арка  - это символ небесного свода, который благословляет брак. Четырехопорная арка несет идею нового дома. Арка может  быть любых форм (дуга, п-образные конструкции, шатер, сходящиеся элементы). Она может быть сделана из разных составных элементов: двери, деревья, ткани, вазы. Обильно украшается цветами, зеленью. <br>Стоимость от 12 000 рублей.'
 
   - var page = {title: 'Арка', url: 'element/arc', type: 'element-page', class: 'page element arc', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/arc/arc-', qnt: 12}, button: {text: 'Заказать оформление арки'}, list2: []};
 
