--- a/src/app/element/auto-decor/index.jade
+++ b/src/app/element/auto-decor/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Свадебная классика: украшение свадебного эскорта - автомобиля, лимузина, кареты. Первая поездка молодых в статусе семьи, в новом статусе. Дорога в новую жизнь. Должно быть красиво обыгран свадебный кортеж, момент появления молодых к гостям. Украшением могут быть  сердца, цветы, ленты, ткань. Стоимость от 5 000 рублей.'
+  - var description = 'Свадебная классика: украшение свадебного эскорта - автомобиля, лимузина, кареты. Первая поездка молодых в статусе семьи, в новом статусе. Дорога в новую жизнь. Должно быть красиво обыгран свадебный кортеж, момент появления молодых к гостям. Украшением могут быть  сердца, цветы, ленты, ткань. <br>Стоимость от 5 000 рублей.'
 
   - var page = {title: 'Украшение авто', url: 'element/auto-decor', type: 'element-page', class: 'page element auto-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/auto-decor/auto-decor-', qnt: 13}, button: {text: 'Заказать украшение авто'}, list2: []};
 
