--- a/src/app/element/bouquets-boutonnieres/index.jade
+++ b/src/app/element/bouquets-boutonnieres/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Центральное и самое главное украшение на свадьбе. Букет невесты отражает ее индивидуальность, стиль и вкусовое предпочтение. Всегда украшает ее. Букет может быть круглый ниспадающий, каплевидный, зонтик, сумочка, браслет, веер, цветы в прическу, на шее. Бутоньерка часто служит дополнением к букету. Единое стилевое решение. Стоимость от 3 500 рублей (букет), от 300 рублей (бутоньерка).'
+  - var description = 'Центральное и самое главное украшение на свадьбе. Букет невесты отражает ее индивидуальность, стиль и вкусовое предпочтение. Всегда украшает ее. Букет может быть круглый ниспадающий, каплевидный, зонтик, сумочка, браслет, веер, цветы в прическу, на шее. Бутоньерка часто служит дополнением к букету. Единое стилевое решение. <br>Стоимость от 3 500 рублей (букет), от 300 рублей (бутоньерка).'
 
   - var page = {title: 'Букеты и бутоньерки', url: 'element/bouquets-boutonnieres', type: 'element-page', class: 'page element bouquets-boutonnieres', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/bouquets-boutonnieres/bouquets-boutonnieres-', qnt: 14}, button: {text: 'Заказать букеты и бутоньерки'}, list2: []};
 
