--- a/src/app/element/chairs-decor/index.jade
+++ b/src/app/element/chairs-decor/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Стулья создают дополнительную возможность для декора. Каждый стул можно сделать троном для гостя. Часто представляемые стулья банкетным залом не соответствуют настроению свадьбы (очень разные) и требуют дополнительного украшения. Используются  чехлы, драпировки, банты, цветочный декор. Самый эффектный стул для свадебного декора - кьявари.  Декор стула может быть съемным и послужить гостю подарком – воспоминанием о мероприятии. Стоимость от 500 рублей.'
+  - var description = 'Стулья создают дополнительную возможность для декора. Каждый стул можно сделать троном для гостя. Часто представляемые стулья банкетным залом не соответствуют настроению свадьбы (очень разные) и требуют дополнительного украшения. Используются  чехлы, драпировки, банты, цветочный декор. Самый эффектный стул для свадебного декора - кьявари.  Декор стула может быть съемным и послужить гостю подарком – воспоминанием о мероприятии. <br>Стоимость от 500 рублей.'
 
   - var page = {title: 'Украшение стульев', url: 'element/chairs-decor', type: 'element-page', class: 'page element chairs-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/chairs-decor/chairs-decor-', qnt: 12}, button: {text: 'Заказать оформление стульев'}, list2: []};
 
