--- a/src/app/element/installation/index.jade
+++ b/src/app/element/installation/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Чтобы красиво заполнить пространство, инсталляции бывают просто незаменимы. По сути – это смысловой элемент, обыгранный цветочным декором. Смысл может задавать как стиль свадьбы, так и индивидуальность: инициалы молодых, LOVE IS... Могут служить дополнительными фотозонами. Стоимость - индивидуальный расчёт.'
+  - var description = 'Чтобы красиво заполнить пространство, инсталляции бывают просто незаменимы. По сути – это смысловой элемент, обыгранный цветочным декором. Смысл может задавать как стиль свадьбы, так и индивидуальность: инициалы молодых, LOVE IS... Могут служить дополнительными фотозонами. <br>Стоимость - индивидуальный расчёт.'
 
   - var page = {title: 'Инсталляции', url: 'element/installation', type: 'element-page', class: 'page element installation', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/installation/installation-', qnt: 12}, button: {text: 'Заказать оформление инсталляций'}, list2: []};
 
