--- a/src/app/element/light-constructions/index.jade
+++ b/src/app/element/light-constructions/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Всегда – дополнительная интрига и уют. Очень современно и технологично смотрятся в ночное время. Обыгрываются инициалы, семейный, родовой герб, знаковые слова (LOVE IS…..),  буквы. Световые гирлянды могут быть развешаны или зонально или повсеместно. В некоторых стилях – must – have. Часто используются в поддержку текстильного декора. Стоимость - индивидуальный расчёт (световые конструкции) от 1 000 рублей / метр (гирлянды).'
+  - var description = 'Всегда – дополнительная интрига и уют. Очень современно и технологично смотрятся в ночное время. Обыгрываются инициалы, семейный, родовой герб, знаковые слова (LOVE IS…..),  буквы. Световые гирлянды могут быть развешаны или зонально или повсеместно. В некоторых стилях – must – have. Часто используются в поддержку текстильного декора. <br>Стоимость - индивидуальный расчёт (световые конструкции) от 1 000 рублей / метр (гирлянды).'
 
   - var page = {title: 'Световые конструкции и гирлянды', url: 'element/light-constructions', type: 'element-page', class: 'page element light-constructions', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/light-constructions/light-constructions-', qnt: 11}, button: {text: 'Заказать оформление световых конструкций'}, list2: []};
 
