--- a/src/app/element/photo-composition/index.jade
+++ b/src/app/element/photo-composition/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Своеобразная декорация мини – театра для фотосессий. Знаковый тренд времени. Must have для всех. Зона веселья, эмоций и развлечений. Бывают очень разными в зависимости от стилей свадеб. Стоимость - индивидуальный расчёт.' 
+  - var description = 'Своеобразная декорация мини – театра для фотосессий. Знаковый тренд времени. Must have для всех. Зона веселья, эмоций и развлечений. Бывают очень разными в зависимости от стилей свадеб. <br>Стоимость - индивидуальный расчёт.' 
 
   - var page = {title: 'Композиции для фотозон', url: 'element/photo-composition', type: 'element-page', class: 'page element photo-composition', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/photo-composition/photo-composition-', qnt: 14}, button: {text: 'Заказать оформление композиций фотозон'}, list2: []};
 
