--- a/src/app/element/stairway/index.jade
+++ b/src/app/element/stairway/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Если в помещении для свадьбы есть лестница ее лучше украшать, так как это всегда красиво и стильно. Эффект восторга гостей и торжественности события будет обеспечен. Суть декора: симметрично повторяющие элементы, цветочные композиции, ткани или гирлянды. Стоимость от 1 500 рублей / метр.'
+  - var description = 'Если в помещении для свадьбы есть лестница ее лучше украшать, так как это всегда красиво и стильно. Эффект восторга гостей и торжественности события будет обеспечен. Суть декора: симметрично повторяющие элементы, цветочные композиции, ткани или гирлянды. <br>Стоимость от 1 500 рублей / метр.'
 
   - var page = {title: 'Лестница', url: 'element/stairway', type: 'element-page', class: 'page element stairway', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/stairway/stairway-', qnt: 9}, button: {text: 'Заказать оформление лестницы'}, list2: []};
 
