--- a/src/app/element/swing/index.jade
+++ b/src/app/element/swing/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Качели символизируют  период ухаживания, романтики, влюбленности. Используются как must-have в некоторых стилях свадеб. Могут служить базой для декора (развешаны по помещению). Если позволяет нагрузка, всегда выигрышно смотрятся  как зона уединения или фотозона. В зависимости от размера –разные функциональные роли. Стоимость от 3 000 рублей.'
+  - var description = 'Качели символизируют  период ухаживания, романтики, влюбленности. Используются как must-have в некоторых стилях свадеб. Могут служить базой для декора (развешаны по помещению). Если позволяет нагрузка, всегда выигрышно смотрятся  как зона уединения или фотозона. В зависимости от размера –разные функциональные роли. <br>Стоимость от 3 000 рублей.'
 
   - var page = {title: 'Качели', url: 'element/swing', type: 'element-page', class: 'page element swing', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/swing/swing-', qnt: 10}, button: {text: 'Заказать оформление качелей'}, list2: []};
 
