--- a/src/app/zone/apperitive/index.jade
+++ b/src/app/zone/apperitive/index.jade
@@ -13,7 +13,8 @@ block vars
   - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
+  - page.list2.push({title: 'Centerpiece', link: 'element/centerpiece'})
+  - page.list2.push({title: 'Канделябры', link: 'element/candelabra'})
   - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
 
 block content
