--- a/src/app/zone/candy-bar/index.jade
+++ b/src/app/zone/candy-bar/index.jade
@@ -14,8 +14,10 @@ block vars
   - page.list.push({title: 'Танцпол', link: 'dance-floor'})
 
 
+  - page.list2.push({title: 'Centerpiece', link: 'element/centerpiece'})
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
-  - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Ниспадающие композиции', link: 'element/flowing-compositions'})
+  - page.list2.push({title: 'Гирдянды', link: 'element/garlands'})
 
 block content
   +zone-page(page)
