--- a/src/app/zone/dance-floor/index.jade
+++ b/src/app/zone/dance-floor/index.jade
@@ -14,8 +14,11 @@ block vars
   - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
+  - page.list2.push({title: 'Входная зона', link: 'element/enter'})
+  - page.list2.push({title: 'Лестница', link: 'element/stairway'})
   - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Указатели и таблички', link: 'element/signs-labels'})
+  - page.list2.push({title: 'Press wall', link: 'element/presswall'})
 
 block content
   +zone-page(page)
