--- a/src/app/zone/gifts-wishes/index.jade
+++ b/src/app/zone/gifts-wishes/index.jade
@@ -14,8 +14,9 @@ block vars
   - page.list.push({title: 'Welcome-зона', link: 'welcome'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
-  - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Композиции на столы', link: 'element/table-composition'})
+  - page.list2.push({title: 'Украшение стульев', link: 'element/chairs-decor'})
+  - page.list2.push({title: 'Инсталляции', link: 'element/installation'})
 
 block content
   +zone-page(page)
