--- a/src/app/zone/lounge/index.jade
+++ b/src/app/zone/lounge/index.jade
@@ -14,8 +14,9 @@ block vars
   - page.list.push({title: 'Candy-bar', link: 'candy-bar'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
   - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Драпировка тканями', link: 'element/drapery'})
+  - page.list2.push({title: 'Композиции на столы', link: 'element/table-composition'})
 
 block content
   +zone-page(page)
