--- a/src/app/zone/photo/index.jade
+++ b/src/app/zone/photo/index.jade
@@ -14,5 +14,13 @@ block vars
   - page.list.push({title: 'Вынос торта', link: 'cake-takeaway'})
 
 
+  - page.list2.push({title: 'Композиции для фотозон', link: 'element/photo-composition'})
+  - page.list2.push({title: 'Press wall', link: 'element/presswall'})
+  - page.list2.push({title: 'Инсталляции', link: 'element/installation'})
+  - page.list2.push({title: 'Качели', link: 'element/swing'})
+  - page.list2.push({title: 'Гирлянды', link: 'element/garlands'})
+  - page.list2.push({title: 'Арка', link: 'element/arc'})
+  - page.list2.push({title: 'Световые конструкции', link: 'element/light-constructions'})
+
 block content
   +zone-page(page)
