--- a/src/app/zone/registration/index.jade
+++ b/src/app/zone/registration/index.jade
@@ -13,7 +13,9 @@ block vars
   - page.list.push({title: 'Лаунж-зона', link: 'lounge'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
+  - page.list2.push({title: 'Арка', link: 'element/arc'})
+  - page.list2.push({title: 'Дорожки из цветов', link: 'element/flower-path'})
+  - page.list2.push({title: 'Украшение стульев', link: 'element/chairs-decor'})
   - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
 
 block content
