--- a/src/app/element/drapery/index.jade
+++ b/src/app/element/drapery/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Декор, создающий воздушность, легкость, прозрачность. Дает возможность скрыть дефекты помещения, сгладить шероховатости. Облагораживают и делают нежными грубые формы (арки, столы). Чаще всего используются ткани: органза, атлас, шелк, иногда бархат. Придают ощущение теплоты и уюта. Выигрышный обобщающий элемент. В свадебном декоре обычно дополняются цветочными композициями. Стоимость - индивидуальный расчёт'
+  - var description = 'Декор, создающий воздушность, легкость, прозрачность. Дает возможность скрыть дефекты помещения, сгладить шероховатости. Облагораживают и делают нежными грубые формы (арки, столы). Чаще всего используются ткани: органза, атлас, шелк, иногда бархат. Придают ощущение теплоты и уюта. Выигрышный обобщающий элемент. В свадебном декоре обычно дополняются цветочными композициями. <br>Стоимость - индивидуальный расчёт'
 
   - var page = {title: 'Драпировка тканями', url: 'element/drapery', type: 'element-page', class: 'page element drapery', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/drapery/drapery-', qnt: 13}, button: {text: 'Заказать оформление тканями'}, list2: []};
 
