--- a/src/app/element/enter/index.jade
+++ b/src/app/element/enter/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = '«Театр начинается с вешалки …..». Во многих свадьбах есть традиция, что жених вносит в помещение невесту на руках. Это композиция, задающая тон празднику, встречающая гостей. Должна перекликаться с общим декором свадьбы. Чаще всего декорируется вход в помещение (дверь, крыльцо, вход в шатер). Стоимость - индивидуальный расчёт.'
+  - var description = '«Театр начинается с вешалки …..». Во многих свадьбах есть традиция, что жених вносит в помещение невесту на руках. Это композиция, задающая тон празднику, встречающая гостей. Должна перекликаться с общим декором свадьбы. Чаще всего декорируется вход в помещение (дверь, крыльцо, вход в шатер). <br>Стоимость - индивидуальный расчёт.'
 
   - var page = {title: 'Входная зона', url: 'element/enter', type: 'element-page', class: 'page element enter', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/enter/enter-', qnt: 10}, button: {text: 'Заказать оформление входной зоны'}, list2: []};
 
