--- a/src/app/element/garlands/index.jade
+++ b/src/app/element/garlands/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'В некоторых свадебных культурах – обязательный элемент декора, символ богатства, благополучия. В основном – цветочные гирлянды. Могут быть очень нарядными и необычными элементами для фотозон. Стоимость от 1 000 рублей / метр.'
+  - var description = 'В некоторых свадебных культурах – обязательный элемент декора, символ богатства, благополучия. В основном – цветочные гирлянды. Могут быть очень нарядными и необычными элементами для фотозон. <br>Стоимость от 1 000 рублей / метр.'
 
   - var page = {title: 'Гирлянды', url: 'element/garlands', type: 'element-page', class: 'page element garlands', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/garlands/garlands-', qnt: 12}, button: {text: 'Заказать оформление гирлянд'}, list2: []};
 
