--- a/src/app/element/hanging-decor/index.jade
+++ b/src/app/element/hanging-decor/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Подвесная композиция в свадебном  декоре – это самый нарядный и эффектный  способ оформления зала. Может быть выдержан симметрично или зонально (над столами гостей, танцполом, молодыми). Из- за того что подвесной декор выше уровня глаз, он хорошо просматривается и по-любому привлекает внимание. Может быть различных размеров (мелкий, крупный, гигантский) и форм (круглый, овальный, прямоугольный). Стоимость от 5 000 рублей.'
+  - var description = 'Подвесная композиция в свадебном  декоре – это самый нарядный и эффектный  способ оформления зала. Может быть выдержан симметрично или зонально (над столами гостей, танцполом, молодыми). Из- за того что подвесной декор выше уровня глаз, он хорошо просматривается и по-любому привлекает внимание. Может быть различных размеров (мелкий, крупный, гигантский) и форм (круглый, овальный, прямоугольный). <br>Стоимость от 5 000 рублей.'
 
   - var page = {title: 'Подвесной декор', url: 'element/hanging-decor', type: 'element-page', class: 'page element hanging-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/hanging-decor/hanging-decor-', qnt: 13}, button: {text: 'Заказать оформление подвесного декора'}, list2: []};
 
