--- a/src/app/element/presswall/index.jade
+++ b/src/app/element/presswall/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Единый, цельный массив цветочных композиций. Живое море цветов. Очень выигрышен для фото. Может быть обыгран ключевыми словами, инициалами молодых. В основном используется как фотозона. Возможно украшение регистрации или президиума для молодых. Стоимость от 20 000 рублей.'
+  - var description = 'Единый, цельный массив цветочных композиций. Живое море цветов. Очень выигрышен для фото. Может быть обыгран ключевыми словами, инициалами молодых. В основном используется как фотозона. Возможно украшение регистрации или президиума для молодых. <br>Стоимость от 20 000 рублей.'
 
   - var page = {title: 'Presswall', url: 'element/presswall', type: 'element-page', class: 'page element presswall', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/presswall/presswall-', qnt: 12}, button: {text: 'Заказать оформление presswall'}, list2: []};
 
