--- a/src/app/element/table-composition/index.jade
+++ b/src/app/element/table-composition/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Классический вариант декорирования столов гостей. Создают уют и настроение каждого отдельного стола. Эффектно дополняют обычную сервировку. Композиция на столы  бывают:  плоские, в виде гирлянды, составных невысоких элементов, венков, свечей, лепестков, которые заполняют пространство стола. Стоимость от 3 000 рублей.'
+  - var description = 'Классический вариант декорирования столов гостей. Создают уют и настроение каждого отдельного стола. Эффектно дополняют обычную сервировку. Композиция на столы бывают: плоские, в виде гирлянды, составных невысоких элементов, венков, свечей, лепестков, которые заполняют пространство стола. <br>Стоимость от 3 000 рублей.'
 
   - var page = {title: 'Композиции на столы', url: 'element/table-composition', type: 'element-page', class: 'page element table-composition', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/table-composition/table-composition-', qnt: 12}, button: {text: 'Заказать оформление композиций'}, list2: []};
 
