--- a/src/app/element/wreaths-bracelets/index.jade
+++ b/src/app/element/wreaths-bracelets/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'Дополнительное украшение для невесты, детей, подружек невесты или всех гостей. Очень выигрышны для фото. Могут быть элементами фотозон. Развлечение. В некоторых стилях свадеб  - must - have. По размерам и наполнению – разнообразны: от одиночных цветков до пышных, красочных композиций. Стоимость от 1500 руб (венки), от 400 руб (браслеты)'
+  - var description = 'Дополнительное украшение для невесты, детей, подружек невесты или всех гостей. Очень выигрышны для фото. Могут быть элементами фотозон. Развлечение. В некоторых стилях свадеб - must - have. По размерам и наполнению – разнообразны: от одиночных цветков до пышных, красочных композиций. <br>Стоимость от 1500 руб (венки), от 400 руб (браслеты)'
 
   - var page = {title: 'Венки и браслеты', url: 'element/wreaths-bracelets', type: 'element-page', class: 'page element wreaths-bracelets', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/wreaths-bracelets/wreaths-bracelets-', qnt: 13}, button: {text: 'Заказать оформление венков и браслетов'}, list2: []};
 
