--- a/src/app/zone/cake-takeaway/index.jade
+++ b/src/app/zone/cake-takeaway/index.jade
@@ -14,8 +14,11 @@ block vars
   - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
 
 
+  - page.list2.push({title: 'Centerpiece', link: 'element/centerpiece'})
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
-  - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Ниспадающие композиции', link: 'element/flowing-compositions'})
+  - page.list2.push({title: 'Гирдянды', link: 'element/garlands'})
+ 
 
 block content
   +zone-page(page)
