--- a/src/app/zone/kinder-table/index.jade
+++ b/src/app/zone/kinder-table/index.jade
@@ -14,8 +14,8 @@ block vars
   - page.list.push({title: 'Президиум', link: 'presidium'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
-  - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Украшение стульев', link: 'element/chairs-decor'})
+  - page.list2.push({title: 'Венки и браслеты', link: 'element/wreaths-bracelets'})
 
 block content
   +zone-page(page)
