--- a/src/app/zone/presidium/index.jade
+++ b/src/app/zone/presidium/index.jade
@@ -14,8 +14,9 @@ block vars
   - page.list.push({title: 'Фотозона', link: 'photo'})
 
 
-  - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
-  - page.list2.push({title: 'Grand декор', link: 'element/grand-decor'})
+  - page.list2.push({title: 'Композиции на столы', link: 'element/table-composition'})
+  - page.list2.push({title: 'Ниспадающие композиции', link: 'element/flowing-compositions'})
+  - page.list2.push({title: 'Press wall', link: 'element/presswall'})
 
 block content
   +zone-page(page)
