--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -3,13 +3,11 @@
   font-size: 0.8rem
   +menu_font
   margin: 0.5rem 0 0.5rem
-  span
-    display: block
+  
   .left.header-title
     width: 40%
     left: 0
-    text-align: left
-    background: yellow
+    text-align: center
     position: absolute
   .center.header-title
     width: 20%
@@ -20,9 +18,34 @@
   .right.header-title
     width: 40%
     left: 60%
-    font-size: 1.2rem
+    font-size: 0.8rem
     text-align: center
     position: absolute
+    
+    span
+      display: block 
+         
+    a
+      text-decoration: none
+      &:before
+        +link-ico
+        background: url('/images/list-title-left.svg') no-repeat top left
+        display: inline-block;
+        height: 1.5rem    
+        margin-left: -50px  
+          
+      &:after
+        +link-ico 
+        background: url('/images/list-title-right.svg') no-repeat top right
+        display: inline-block;
+        height: 1.5rem
+        margin-right: 50px
+            
+      &:hover
+        text-decoration: underline
+        background-color: #d6b6d6
+        
+
 
 .row.first-page-title
   margin: 1rem auto 5rem
