start fixing about page

--- a/src/app/about.jade
+++ b/src/app/about.jade
@@ -2,7 +2,7 @@ extends _layout
 
 block vars
 
-  - var txt = 'Мы знаем, как сделать Вашу свадьбу НЕЗАБЫВАЕМОЙ'
+  - var txt = 'Студия дизайна Le Decor - декораторы, дизайнеры и флористы европейского уровня.<br><br>Наш девиз: королевская роскошь по доступным ценам.<br><br>Квалификация подтверждается обучением и работой с ведущими европейскими мастерами австрийской и французской школы дизайна.'
   - var page = {title: 'О нас          ', url: '', type: 'about', class: 'page about', content: {text: txt }};
 
 
