--- a/src/sass/partials/_about.sass
+++ b/src/sass/partials/_about.sass
@@ -30,7 +30,7 @@
           background: url('/images/style-subtitle-right.svg') no-repeat 0 0
           right: 0
   .desc
-    text-align: justify
+    text-align: center
     +breakpoint(max-width $break-small)
       +span(12)
     +breakpoint(min-width $break-small)
@@ -39,6 +39,7 @@
     +breakpoint(min-width $break-medium)
       +span(4)
       +push(4)
+    background: url('/images/about-image.jpg') no-repeat 0 0
 
   .row .col
     +breakpoint(max-width $break-small)
@@ -50,3 +51,4 @@
       +push(1)
   p
     line-height: 1.5
+    background: url('/images/about-image.jpg') no-repeat 0 0
