about page: add flower image

--- a/src/app/_layout.jade
+++ b/src/app/_layout.jade
@@ -214,6 +214,8 @@ mixin about-page(page)
       .desc
           p !{page.content.text}
           .clearfix
+  center
+    img(src="/images/about-image.jpg")
 
 mixin contact-page(page)
   +nav(page)
