--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -29,14 +29,14 @@
       text-decoration: none
       &:before
         +link-ico
-        background: url('/images/list-title-left.svg') no-repeat top left
+        //background: url('/images/list-title-left.svg') no-repeat top left
         display: inline-block;
         height: 1.5rem    
         margin-left: -50px  
           
       &:after
         +link-ico 
-        background: url('/images/list-title-right.svg') no-repeat top right
+        //background: url('/images/list-title-right.svg') no-repeat top right
         display: inline-block;
         height: 1.5rem
         margin-right: 50px
