--- a/src/sass/partials/_color.sass
+++ b/src/sass/partials/_color.sass
@@ -7,5 +7,9 @@
     text-align: center  
   h4 
     line-height: 1.5
-    color: $color-pink
+    color: $color-pink 
+
+  p
+    font-size: 1.2rem
+    line-height: 1.5
 
