text justify, email and remove 3 pictures

--- a/src/app/_layout.jade
+++ b/src/app/_layout.jade
@@ -193,7 +193,7 @@ mixin color-page(page)
 
 
 mixin sendmail
-  form(action="http://formspree.io/decor-svadby@mail.ru" method="post")
+  form(action="http://formspree.io/decorsvadby@gmail.com" method="post")
     p
       input(type="name" class ="name" name="_name" title="имя" placeholder="Ваше имя")
     p
