change link to 'decor-elki.com'

--- a/src/app/_layout.jade
+++ b/src/app/_layout.jade
@@ -36,7 +36,7 @@ mixin front-page(page)
       span Мы создадим <br> Вашу неповторимую свадьбу!
     .right.header-title
       span 
-        a(href="http://decor-elki.ru") Мы создаём <br> новогодний декор!
+        a(href="http://decor-elki.com") Мы создаём <br> новогодний декор!
   +nav(page)
   .row.first-page-title
     img(src='/images/logo-title.svg').logo-title
